# CADya

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/CADya/: CMakeLists.txt  main.cpp
src/CADya/widgets/: glcanvas.cpp  glcanvas.hpp  mainwindow.cpp  mainwindow.hpp
src/kernel/: bezier.hpp  bezier_algorithms.hpp  box.hpp  math.hpp  point.hpp  traits.hpp
src/lib/: CMakeLists.txt  math.hpp  type_traits.hpp  utility.hpp
src/lib/geometry/: angle.hpp  circle.cpp  circle.hpp  circle_utils.cpp  circle_utils.hpp  coordinate.hpp  coordinate_utils.cpp  coordinate_utils.hpp  intersection.cpp  intersection.hpp  length.hpp  line.cpp  line.hpp  line_segment.cpp  line_segment.hpp  line_segment_utils.cpp  line_segment_utils.hpp  line_utils.cpp  line_utils.hpp  math.hpp  trigonometry.cpp  trigonometry.hpp  vector.hpp  vector_utils.hpp
test/: CMakeLists.txt
test/kernel/: CMakeLists.txt  bezier.cpp  box.cpp  point.cpp
test/kernel/matchers/: bezier_matcher.hpp  box_matcher.hpp  point_matcher.hpp
tests/lib/: CMakeLists.txt
tests/lib/geometry/: angle_test.cpp  circle_test.cpp  circle_utils_test.cpp  coordinate_utils_test.cpp  intersection_test.cpp  line_segment_utils_test.cpp  line_test.cpp  line_utils_test.cpp  trigonometry_test.cpp
tests/lib/matchers/: angle_matcher.hpp  base_matcher.hpp  circle_matcher.hpp  coordinate_matcher.hpp  line_matcher.hpp  line_segment_matcher.hpp  vector_matcher.hpp
